# ml-fagskole

./: .gitignore  README.md  intro_to_ml.ipynb  intro_to_ml.slides.html  pyproject.toml  requirements.txt  slides.css
data/: biomasse_med_maalinger.csv  ras_data.csv
presentation/: intro_to_ml.ipynb  intro_to_ml_presentation.md  slides.css  slides_config.js
