[project]
name = "ml-fagskole"
version = "0.1.0"
description = "Intro til ML for akvakultur"
requires-python = ">= 3.11"
authors = [{name = "Truls Fretland"}]
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.13"
pip = "*"
rise = ">=5.7.1,<6"

[tool.pixi.pypi-dependencies]
ml-fagskole = { path = ".", editable = true }

[tool.pixi.tasks]
lab = "jupyter lab"
notebook = "jupyter notebook"
# Dette er kommandoen som lager HTML-filen
slides = "jupyter nbconvert intro_to_ml.ipynb --to slides --no-prompt"
# Denne lager slides OG åpner dem i nettleseren med en gang (valgfritt)
present = "jupyter nbconvert intro_to_ml.ipynb --to slides --post serve --no-prompt"
# CTRL+C virker ikke i present-modus, så vi lager en egen oppgave for å starte en enkel HTTP-server
# Enklere i utvikling
serve = "jupyter nbconvert intro_to_ml.ipynb --to slides --no-prompt && python -m http.server 8000"


[tool.ruff]
exclude = [".pixi", ".git", ".ipynb_checkpoints", "__pycache__"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F"]
ignore = []
